@@ -3,6 +3,10 @@
     <li><b></b>September 14, 2016:</b> <a href="http://github.com">GitHub</a> got great interface improvements</li>
 </ul>
 
+<h2>Tips, Tricks &amp; Words of Wisdom</h2>
+<ul>
+<li>If you dislike tag completion as you type in PhpStorm, go to Preferences-&gt;Editor-&gt;General-&gt;Smart Keys and you know what to do next.</li>
+</ul>
 
 <h2>nnBits News</h2>
 <ul>
