@@ -1,3 +1,10 @@
+<h2>Links</h2>
+<ul>
+    <li><a href="https://www.kernel.org/pub/linux/kernel/">Linux Kernel Download Tree</a></li>
+    <li><a href="https://git.kernel.org/cgit/linux/kernel/git/stable/linux-stable.git/tree/Documentation/applying-patches.txt?id=refs/tags/v4.7.4">Official Patching Instructions</a></li>
+</ul>
+
+
 <h2>Three major categories of Linux kernel versions</h2>
 
 <ul>
